--- a/debug/circles.html
+++ b/debug/circles.html
@@ -23,6 +23,7 @@
     <label><input id='show-tile-boundaries-checkbox' type='checkbox'> tile debug</label><br />
     <label><input id='show-symbol-collision-boxes-checkbox' type='checkbox'> collision debug</label><br />
     <label><input id='terrain-checkbox' type='checkbox' checked> terrain</label><br />
+    <label><input id='globe-checkbox' type='checkbox'> globe</label><br />
     <label><input id='repaint-checkbox' type='checkbox'> repaint. FPS: </label><label id='fps'>0</label><br />
 </div>
 
@@ -38,7 +39,6 @@ var map = window.map = new mapboxgl.Map({
     style: 'mapbox://styles/mapbox/streets-v9',
     hash: true
 });
-map.showTileBoundaries = true;
 map._showQueryGeometry = true;
 map.repaint = true;
 map.addControl(new mapboxgl.NavigationControl());
@@ -95,6 +95,10 @@ map.on('load', function() {
 
 document.getElementById('terrain-checkbox').onclick = function() {
     map.setTerrain(this.checked ? {"source": "mapbox-dem"} : null);
+};
+
+document.getElementById('globe-checkbox').onclick = function() {
+    map.setProjection(this.checked ? "globe" : null);
 };
 
 document.getElementById('show-tile-boundaries-checkbox').onclick = function() {
