--- a/debug/terrain-debug.html
+++ b/debug/terrain-debug.html
@@ -145,6 +145,8 @@ map.on('style.load', function() {
         }
     });
 
+    map.setGlobe({ });
+
     map.addLayer({
         'id': 'population',
         'type': 'circle',
