--- a/debug/fog.html
+++ b/debug/fog.html
@@ -6,14 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel='stylesheet' href='../dist/mapbox-gl.css' />
     <style>
-        body { margin: 0; padding: 0 }
+        body { margin: 0; padding: 0; }
         html, body, #map { height: 100%; }
-
-        #checkboxes {
-            position: absolute;
-            top:0;
-            left:0;
-            padding:10px;
+        .mapboxgl-canvas {
+            background-color: blue;
         }
     </style>
 </head>
@@ -28,21 +24,14 @@
 
 var GUIParams = function() {
     this.enableFog = true;
-    this.enableTerrain = false;
-    this.freezeTileCoverage = false;
-    this.enableSky = true;
-    this.terrainExaggeration = 1.5;
-    this.changeByZoom = false;
-    this.disableAtLowPitch = false;
-    this.style = 'satellite-streets-v11';
-    this.start = 0.3;
-    this.end = 0.6;
+    this.style = 'streets-v11';
+    this.start = 0.8;
+    this.end = 2.5;
     this.color = [255, 255, 255];
+    this.skyColor = [0, 0, 0];
     this.opacity = 1.0;
-    this.horizonBlend = 0.1;
-    this.showTileBoundaries = false;
-    this.showCollisionBoxes = false;
-    this.fov = 36.86989764584402;
+    this.skyOpacity = 1.0;
+    this.horizonBlend = 0.5;
 };
 
 var guiParams = new GUIParams();
@@ -53,7 +42,7 @@ var map = window.map = new mapboxgl.Map({
     center: [78.7193, 36.2927],
     pitch: 75,
     bearing: -10,
-    style: 'mapbox://styles/mapbox/satellite-streets-v11',
+    style: 'mapbox://styles/mapbox/streets-v11',
     hash: true,
     projection: 'globe'
 });
@@ -74,74 +63,6 @@ window.onload = function() {
         map.setStyle('mapbox://styles/' + value);
     });
 
-    var showTileBoundaries = gui.add(guiParams, 'showTileBoundaries');
-    showTileBoundaries.onFinishChange((value) => {
-        map.showTileBoundaries = value;
-    });
-    var showCollisionBoxes = gui.add(guiParams, 'showCollisionBoxes');
-    showCollisionBoxes.onFinishChange((value) => {
-        map.showCollisionBoxes = value;
-    });
-    var freezeTileCoverage = gui.add(guiParams, 'freezeTileCoverage');
-    freezeTileCoverage.onFinishChange((value) => {
-        map.transform.freezeTileCoverage = value;
-    });
-    var enableSky = gui.add(guiParams, 'enableSky');
-    enableSky.onFinishChange((value) => {
-        map.setLayoutProperty('sky', 'visibility', value ? 'visible' : 'none');
-    });
-    var fov = gui.add(guiParams, 'fov', 5, 60);
-    fov.onChange((value) => {
-        map.transform.fov = value;
-        map.resize();
-    });
-
-    var terrain = gui.addFolder('Terrain');
-    var enableTerrain = terrain.add(guiParams, 'enableTerrain');
-    enableTerrain.onFinishChange((value) => {
-        map.setTerrain(value ? {"source": "mapbox-dem", "exaggeration": guiParams.terrainExaggeration} : null);
-    });
-
-    var terrainExaggeration = terrain.add(guiParams, 'terrainExaggeration', 0.0, 4);
-    terrainExaggeration.onFinishChange((value) => {
-        if (guiParams.enableTerrain) {
-            map.setTerrain({"source": "mapbox-dem", "exaggeration": value});
-        }
-    });
-    var changeByZoom = terrain.add(guiParams, 'changeByZoom');
-    changeByZoom.onFinishChange((value) => {
-        map.setTerrain(guiParams.enableTerrain ? {
-            "source": "mapbox-dem",
-            "exaggeration": value ? [
-                "interpolate",
-                [
-                    "linear"
-                ],
-                [
-                    "zoom"
-                ],
-                0,
-                20,
-                12,
-                guiParams.terrainExaggeration,
-                16,
-                0
-            ] : guiParams.terrainExaggeration
-        } : null);
-    });
-    var disableAtLowPitch = terrain.add(guiParams, 'disableAtLowPitch');
-    let disabledOnPitch = false;
-    map.on('pitch', () => {
-        if (guiParams.enableTerrain && guiParams.disableAtLowPitch) {
-            if (map.getPitch() < 30) {
-                map.setTerrain(map.getPitch < 1 ? null : {"source": "mapbox-dem", "exaggeration": map.getPitch() / 30 * guiParams.terrainExaggeration});
-                disabledOnPitch = true;
-            } else if (disabledOnPitch) {
-                map.setTerrain({"source": "mapbox-dem", "exaggeration": guiParams.terrainExaggeration});
-            }
-        }
-    });
-
     var fog = gui.addFolder('Fog');
     var enableFog = fog.add(guiParams, 'enableFog');
     enableFog.onFinishChange((value) => {
@@ -152,21 +73,21 @@ window.onload = function() {
         } : null);
     });
 
-    var start = fog.add(guiParams, 'start', -20, 20);
+    var start = fog.add(guiParams, 'start', 0, 5);
     start.onChange((value) => {
         map.setFog({
             "range": [value, guiParams.end],
         });
     });
 
-    var end = fog.add(guiParams, 'end', -20, 20);
+    var end = fog.add(guiParams, 'end', 0, 5);
     end.onChange((value) => {
         map.setFog({
             "range": [guiParams.start, value],
         });
     });
 
-    var horizonBlend = fog.add(guiParams, 'horizonBlend', 0.0, 1.0);
+    var horizonBlend = fog.add(guiParams, 'horizonBlend', 0.0, 10.0);
     horizonBlend.onChange((value) => {
         map.setFog({
             "horizon-blend": value,
@@ -186,59 +107,41 @@ window.onload = function() {
             "color": 'rgba(' + value[0] + ', ' + value[1] + ', ' + value[2] + ', ' + guiParams.opacity + ')'
         });
     });
+
+    var skyOpacity = fog.add(guiParams, 'skyOpacity', 0.0, 1.0);
+    skyOpacity.onChange((value) => {
+        map.setFog({
+            "sky-color": 'rgba(' + guiParams.skyColor[0] + ', ' + guiParams.skyColor[1] + ', ' + guiParams.skyColor[2] + ', ' + value + ')'
+        });
+    });
+
+    var skyColor = fog.addColor(guiParams, 'skyColor');
+    skyColor.onChange((value) => {
+        map.setFog({
+            "sky-color": 'rgba(' + value[0] + ', ' + value[1] + ', ' + value[2] + ', ' + guiParams.skyOpacity + ')'
+        });
+    });
 };
 
 map.on('style.load', function() {
-    map.addSource('mapbox-dem', {
-        "type": "raster-dem",
-        "url": "mapbox://mapbox.mapbox-terrain-dem-v1",
-        "tileSize": 512,
-        "maxzoom": 14
-    });
-
-    map.addLayer({
-        'id': '3d-buildings',
-        'source': 'composite',
-        'source-layer': 'building',
-        'filter': ['==', 'extrude', 'true'],
-        'type': 'fill-extrusion',
-        'paint': {
-            'fill-extrusion-color': '#DDD',
-            'fill-extrusion-height': ['*', ['get', 'height'], 2],
-            'fill-extrusion-opacity': 0.7
-        }
-    });
-
-    map.addLayer({
-        'id': 'sky',
-        'type': 'sky',
-        'paint': {
-            'sky-type': 'atmosphere',
-            'sky-gradient-center': [90, 3],
-            'sky-opacity': [
-                'interpolate',
-                ['exponential', 0.1],
-                ['zoom'],
-                5,
-                0,
-                22,
-                1
-            ]
-        }
-    });
-
     map.setFog(guiParams.enableFog ? {
         "range": [guiParams.start, guiParams.end],
         "color": 'rgba(' + guiParams.color[0] + ', ' + guiParams.color[1] + ', ' + guiParams.color[2] + ', ' + guiParams.opacity + ')',
-        "horizon-blend": guiParams.horizonBlend
+        "horizon-blend": guiParams.horizonBlend,
+        "sky-color": 'rgba(' + guiParams.skyColor[0] + ', ' + guiParams.skyColor[1] + ', ' + guiParams.skyColor[2] + ', ' + guiParams.skyOpacity + ')',
+        'color-transition': {
+            'duration': 500
+        },
+        'range-transition': {
+            'duration': 500
+        },
+        'horizon-blend-transition': {
+            'duration': 500
+        },
+        'sky-color-transition': {
+            'duration': 500
+        },
     } : null);
-
-    map.setTerrain(guiParams.enableTerrain ? {
-        "source": "mapbox-dem",
-        "exaggeration": guiParams.terrainExaggeration
-    } : null);
-
-    map.showTileBoundaries = guiParams.showTileBoundaries;
 });
 
 </script>
