single shared vertex buffer implementaion WIP

--- a/debug/flytolocations.html
+++ b/debug/flytolocations.html
@@ -94,7 +94,7 @@ function playback() {
 }
 
 map.on('load', () => {
-    map.showTerrainWireframe = true;
+    // map.showTerrainWireframe = true;
     playback();
 });
 
