--- a/debug/scroll_zoom_blocker.html
+++ b/debug/scroll_zoom_blocker.html
@@ -75,7 +75,7 @@
 <script src='../debug/access_token_generated.js'></script>
 <script>
 
-const map = window.map = new mapboxgl.Map({
+const map = new mapboxgl.Map({
     container: 'map',
     zoom: 12.5,
     center: [-77.01866, 38.888],
