update terrain sources

--- a/debug/3d-playground.html
+++ b/debug/3d-playground.html
@@ -147,7 +147,7 @@ let first = true;
 map.on('style.load', function() {
     map.addSource('mapbox-dem', {
         "type": "raster-dem",
-        "url": "mapbox://mapbox.terrain-rgb",
+        "url": "mapbox://mapbox.mapbox-terrain-dem-v1",
         "tileSize": 512,
         "maxzoom": 14
     });
