--- a/debug/featurestate.html
+++ b/debug/featurestate.html
@@ -45,7 +45,7 @@ var map = window.map = new mapboxgl.Map({
 map.on('load', () => {
     map.addSource('mapbox-dem', {
         "type": "raster-dem",
-        "url": "mapbox://mapbox.terrain-rgb",
+        "url": "mapbox://mapbox.mapbox-terrain-dem-v1",
         "tileSize": 512,
         "maxzoom": 14
     });
