--- a/debug/video.html
+++ b/debug/video.html
@@ -58,7 +58,7 @@ var videoStyle = {
         },
         'mapbox-dem': {
             "type": "raster-dem",
-            "url": "mapbox://mapbox.terrain-rgb",
+            "url": "mapbox://mapbox.mapbox-terrain-dem-v1",
             "tileSize": 512,
             "maxzoom": 14
         }
