--- a/debug/fog.html
+++ b/debug/fog.html
@@ -170,7 +170,7 @@ marker.togglePopup();
 map.on('style.load', function() {
     map.addSource('mapbox-dem', {
         "type": "raster-dem",
-        "url": "mapbox://mapbox.terrain-rgb",
+        "url": "mapbox://mapbox.mapbox-terrain-dem-v1",
         "tileSize": 512,
         "maxzoom": 14
     });
