--- a/debug/scroll_zoom_blocker.html
+++ b/debug/scroll_zoom_blocker.html
@@ -75,15 +75,18 @@
 <script src='../debug/access_token_generated.js'></script>
 <script>
 
-const map = new mapboxgl.Map({
-    container: 'map',
-    zoom: 12.5,
-    center: [-77.01866, 38.888],
-    style: 'mapbox://styles/mapbox/streets-v11',
-    cooperativeGestures: true
-});
-
-map.addControl(new mapboxgl.FullscreenControl());
+if (!mapboxgl.supported()) {
+    alert('Your browser does not support Mapbox GL');
+} else {
+    const map = new mapboxgl.Map({
+        container: 'map',
+        zoom: 12.5,
+        center: [-77.01866, 38.888],
+        style: 'mapbox://styles/mapbox/streets-v11',
+        cooperativeGestures: true
+    });
+    map.addControl(new mapboxgl.FullscreenControl());
+}
 
 </script>
 </body>
