Add clarification to how to box zoom
Co-authored-by: Aidan H <aidan.hendrickson@mapbox.com>

--- a/debug/scroll_zoom_blocker.html
+++ b/debug/scroll_zoom_blocker.html
@@ -63,7 +63,7 @@
       <li><input type="checkbox"> Scroll zoom map while pressing CMD/CTRL keys</li>
       <li><input type="checkbox"> Drag pan map</li>
       <li><input type="checkbox"> Drag rotate map</li>
-      <li><input type="checkbox"> Box zoom</li>
+      <li><input type="checkbox"> Box zoom with shift and click + drag</li>
       <li><input type="checkbox"> Keyboard zoom with -/+</li>
       <li><input type="checkbox"> Keyboard pan with arrow keys</li>
       <li><input type="checkbox"> Keyboard rotate with shift and right/left arrow keys</li>
