--- a/debug/padding.html
+++ b/debug/padding.html
@@ -8,15 +8,17 @@
     <style>
         body { margin: 0; padding: 0; }
         html, body, #map { height: 100%; }
-        #getBounds { position: absolute; top: 0; left; 0; }
-        #setBounds { position: absolute; top: 0; left: 78px; }
+        #controls { position: absolute; top: 0; left: 0; }
     </style>
 </head>
 
 <body>
 <div id='map'></div>
-<button id="getBounds">getBounds</button>
-<button id="setBounds">setBounds</button>
+<div id="controls">
+    <button id="getBounds">getBounds</button>
+    <button id="setBounds">setBounds</button>
+    <button id="maintainBearing">Maintain Bearing: false</button>
+</div>
 
 <script src='../dist/mapbox-gl-dev.js'></script>
 <script src='../debug/access_token_generated.js'></script>
@@ -57,6 +59,7 @@ map.on('load', function () {
 });
 
 var bounds;
+var maintainBearing = false;
 document.getElementById('getBounds').addEventListener('click', function () {
     bounds = map.getBounds();
     map.getSource('bounds').setData({
@@ -76,8 +79,14 @@ document.getElementById('getBounds').addEventListener('click', function () {
 });
 document.getElementById('setBounds').addEventListener('click', function () {
     map.fitBounds(bounds, {
-        duration: 0
+        duration: 0,
+        bearing: maintainBearing ? map.getBearing() : 0,
     });
+});
+const maintainBearingElement = document.getElementById('maintainBearing');
+maintainBearingElement.addEventListener('click', function() {
+    maintainBearing = !maintainBearing;
+    maintainBearingElement.innerHTML = `Maintain Bearing: ${maintainBearing}`;
 });
 </script>
 </body>
